# miniz_oxide

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  Cargo.toml  LICENSE-MIT.md  README.md  amalgamate.sh  build.sh  build_afl.sh  build_fuzz.sh  cbindgen.toml  cliff.toml  clippy.toml  miniz.c  miniz.h  miniz_extra_defs.h  miniz_tdef.c  miniz_zip.h  performance.sh  run_afl.sh  run_fuzz.sh  test.sh  travis-after-success.sh
.github/workflows/: test.yml
benches/: bench.rs
benches/data/: bin  code  compressed  short
examples/: example1.c  example4.c  example5.c
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_high.rs  inflate_nonwrapping.rs  roundtrip.rs  roundtrip_zlib.rs  via_flate2.rs
fuzz/seeds/inflate_nonwrapping/: empty_comp
in/: basics
miniz/: miniz.h
miniz_oxide/: Cargo.toml  Readme.md  build.rs
miniz_oxide/benches/: benchmark.rs
miniz_oxide/src/: lib.rs  lib_oxide.rs  shared.rs
miniz_oxide/src/deflate/: buffer.rs  core.rs  mod.rs  state.rs  stored.rs  stream.rs  tdef_oxide.rs  zlib.rs
miniz_oxide/src/inflate/: core.rs  mod.rs  output_buffer.rs  state.rs  stream.rs  tinfl_oxide.rs
miniz_oxide/src/serde/: big_array.rs
miniz_oxide/tests/: flush.rs  test.rs  test_serde.rs
miniz_oxide/tests/test_data/: numbers.deflate  numbers.txt  write_len_bytes_to_end
miniz_oxide_test/: Cargo.toml
miniz_oxide_test/tests/: test_serde.rs
miniz_stub/: miniz.c  miniz_tdef.c  miniz_tinfl.c  miniz_zip.c
src/: build.rs  c_export.rs  lib.rs  lib_oxide.rs  main.rs  miniz-rs.c  tdef.rs  tinfl.rs
src/tdef/: mod.rs  tdef_oxide.rs
src/tinfl/: mod.rs  tinfl_oxide.rs
tests/: miniz_tester.cpp  test.rs
