[package]
name = "miniz_oxide_c_api"
version = "0.1.0"
build = "src/build.rs"
license = "MIT"
authors = ["Frommi <daniil.liferenko@gmail.com>"]

[workspace]

[lib]
name = "miniz_oxide_c_api"
crate-type = ['rlib']

[dependencies]
libc = "0.2.22"
crc = "^1.0.0"
miniz_oxide = { path = "miniz_oxide" }

[build-dependencies]
cc = "1.0"

[features]
default = []
miniz_zip = ["build_stub_miniz"]
fuzzing = ["build_orig_miniz"]
benching = ["build_orig_miniz"]
build_orig_miniz = []
build_stub_miniz = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
