[package]
name = "miniz_oxide_c_api"
authors = ["Frommi <daniil.liferenko@gmail.com>"]
version = "0.1.0"
build = "src/build.rs"
license = "MIT"
readme = "README.md"
keywords = ["zlib", "miniz", "deflate", "encoding"]
categories = ["compression"]
repository = "https://github.com/Frommi/miniz_oxide"
homepage = "https://github.com/Frommi/miniz_oxide/"
documentation = "https://docs.rs/miniz_oxide_c_api"
description = "DEFLATE compression and decompression API designed to be Rust drop-in replacement for miniz"

[workspace]

[lib]
name = "miniz_oxide_c_api"
crate-type = ['rlib']

[dependencies]
libc = "0.2.22"
crc = "1.0.0"
miniz_oxide = { path = "miniz_oxide", version = "0.1.0" }

[build-dependencies]
cc = "1.0"

[features]
default = []
miniz_zip = ["build_stub_miniz"]
fuzzing = ["build_orig_miniz"]
benching = ["build_orig_miniz"]
build_orig_miniz = []
build_stub_miniz = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[badges]
travis-ci = { repository = "Frommi/miniz_oxide" }
