[package]
name = "miniz_oxide"
version = "0.1.0"
license = "MIT"
authors = ["Frommi <daniil.liferenko@gmail.com>"]

[lib]
name = "miniz_oxide"

[dependencies]
libc = "0.2.22"
adler32 = "1.0.2"
crc = "^1.0.0"

[features]
default = ["build_non_rust"]
fuzzing = []
bench = ["build_non_rust"]
build_non_rust = []

